5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1712_2496.log
== TEST (2019-05-13 15:32:49) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1)
	soma = soma + 1

-- ERROR:
File "XXXX", line 3
    while (num != -1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:33:31) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num > -1)
	soma = soma + 1

-- ERROR:
File "XXXX", line 3
    while (num > -1)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:34:11) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	

-- ERROR:
File "XXXX", line 5
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:36:45) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = 
	

-- ERROR:
File "XXXX", line 6
    cont = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:37:29) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = cont + 1
	num int(input("Digite o numero: "))
	

-- ERROR:
File "XXXX", line 7
    num int(input())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:37:38) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = cont + 1
	num int(input("Digite o numero: ")):
	

-- ERROR:
File "XXXX", line 7
    num int(input()):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:37:42) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = cont + 1
num int(input("Digite o numero: ")):
	

-- ERROR:
File "XXXX", line 7
    num int(input()):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:39:18) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:39:43) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma/cont)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:40:11) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma/cont)
	

-- EXECUTION TIME:
0.203214
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:40:56) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma/cont)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:41:08) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma/cont)
	

-- EXECUTION TIME:
0.132259
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:41:16) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma/cont)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:41:48) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma/cont)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:41:58) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma/cont)
	

-- EXECUTION TIME:
0.160186
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:42:34) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma/cont)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:42:59) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma/cont)
	

-- EXECUTION TIME:
0.283153
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:43:18) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:43:33) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- EXECUTION TIME:
0.175815
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:43:42) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:43:59) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + 1 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- EXECUTION TIME:
0.141032
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:44:42) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:44:54) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- EXECUTION TIME:
0.225641
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:45:39) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- EXECUTION TIME:
0.137273
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:45:40) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:46:12) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma/cont)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:46:22) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma/cont)
	

-- EXECUTION TIME:
0.194373
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:46:45) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:46:57) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- EXECUTION TIME:
0.124591
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:47:12) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:47:33) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- EXECUTION TIME:
0.181836
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:48:49) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0): 
	print(soma/cont)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:49:06) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0): 
	print(soma/cont)
	

-- EXECUTION TIME:
0.188453
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:49:27) 
-- CODE:
cont = -1
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0): 
	print(soma/cont)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:49:37) 
-- CODE:
cont = -1
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0): 
	print(soma/cont)
	

-- EXECUTION TIME:
0.146935
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:49:44) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0): 
	print(soma/cont)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:49:59) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = int(input("Digite um numero: "))
if (num > 0): 
	print(soma/cont)
	

-- EXECUTION TIME:
0.127115
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:50:53) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0): 
	print(soma)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:51:02) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0): 
	print(soma)
	

-- EXECUTION TIME:
0.123206
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:51:11) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0): 
	print(soma)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:51:33) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0): 
	print(soma)
	

-- EXECUTION TIME:
0.204328
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:52:21) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:54:12) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:54:34) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- EXECUTION TIME:
0.19812
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:55:09) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:55:22) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
if (num > 0):
	print(soma)
	

-- EXECUTION TIME:
0.148531
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:46:06) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	

-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:46:48) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	

-- EXECUTION TIME:
0.297625
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:50:51) 
-- CODE:
soma = 0
cont = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = int(input("Digite um numero: "))
	
-- ERROR:
File "XXXX", line 8
    if (num > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:51:11) 
-- CODE:
soma = 0
cont = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = int(input("Digite um numero: "))
	
-- EXECUTION TIME:
0.227879
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:51:33) 
-- CODE:
soma = 0
cont = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = input("Digite um numero: "))
	
-- ERROR:
File "XXXX", line 7
    num = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:51:43) 
-- CODE:
soma = 0
cont = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = input("Digite um numero: ")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = soma + num 
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:53:30) 
-- CODE:
soma = 0
cont = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = input("Digite um numero: ")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = soma + num 
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:53:45) 
-- CODE:
soma = 0
cont = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = input("Digite um numero: ")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = soma + num 
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:54:14) 
-- CODE:
soma = 0
cont = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma+num 
	cont = cont + 1
	num = input("Digite um numero: ")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = soma+num 
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:55:57) 
-- CODE:
soma = 0
cont = 0
num = int(input("Digite um numero: "))
while (num != -1):
	soma = soma + num 
	cont = cont + 1
	num = input("Digite um numero: ")
print(soma/cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = soma + num 
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:15:40) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 20:16:13) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- EXECUTION TIME:
0.203257
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:16:18) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 20:17:50) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- EXECUTION TIME:
0.16408
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:18:55) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:19:33) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	num = input("Digite um numero: ")
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = soma + num 
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:19:54) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:21:10) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	
	print(soma)
-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:24:39) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	
	print(soma)
-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:25:23) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	num = input("Digite um numero: ")
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = soma + num 
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:25:48) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 20:26:33) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- EXECUTION TIME:
0.771531
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:27:11) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma != -1)
-- OUTPUT:
True
True
True
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:27:41) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:29:27) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num == 10):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 20:29:37) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num == 10):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- EXECUTION TIME:
0.502455
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:29:49) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num <= 10):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 20:30:11) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num <= 10):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- EXECUTION TIME:
0.671518
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:30:45) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num <= 10 and num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:31:10) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num <= 10 and num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 20:31:33) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num <= 10 and num != -1):
	soma = soma + num 
	num = int(input("Digite um numero: "))
	print(soma)
-- EXECUTION TIME:
0.681803
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:34:44) 
-- CODE:
soma = 0
cont = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
	print(soma/cont)
-- OUTPUT:
-525.0
275.0
294.3333333333333
218.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 20:35:19) 
-- CODE:
soma = 0
cont = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
	print(soma/cont)
-- EXECUTION TIME:
0.515136
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525.0
275.0
294.3333333333333
218.5
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953.0
21803.0
10884.333333333334
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:35:26) 
-- CODE:
soma = 0
cont = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num
	cont = cont + 5 
	num = int(input("Digite um numero: "))
	print(soma/cont)
-- OUTPUT:
-105.0
55.0
58.86666666666667
43.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 20:37:05) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num 
	
	print(soma)
-- EXECUTION TIME:
669.9
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:59:33) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0
while (num != -1):
	soma = soma + num
	
	num = int(input("Digite outro numero: "))
	
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:59:53) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0
while (num != -1):
	soma = soma + num
	
	num = int(input("Digite outro numero: "))
	
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:59:56) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0
while (num != -1):
	soma = soma + num
	
	num = int(input("Digite outro numero: "))
	
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 20:59:58) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0
while (num != -1):
	soma = soma + num
	
	num = int(input("Digite outro numero: "))
	
print(soma)
-- EXECUTION TIME:
0.0329759
-- ERROR:
Error response from daemon: Container dc441e77760c1d9744c151a920bff9f9a523798a91ceb5859f1b4b386456b722 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:00:02) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0
while (num != -1):
	soma = soma + num
	
	num = int(input("Digite outro numero: "))
	
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:00:25) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0
while (num != -1):
	soma = soma + num
	
	num = int(input("Digite outro numero: "))
	
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:29:57) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))
# zera variavel acumuladora
soma = 0
# Laco de repeticao
while (num != -1):
# Acumula valor
	soma = soma + num
# Inputs seguintes
	num = int(input("Digite outro numero: "))
# Imprimir resultados
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 21:30:39) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))
# zera variavel acumuladora
soma = 0
# Laco de repeticao
while (num != -1):
# Acumula valor
	soma = soma + num
# Inputs seguintes
	num = int(input("Digite outro numero: "))
# Imprimir resultados
print(soma)
-- EXECUTION TIME:
0.981979
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
